# workflow-hub

./: .env.example  .gitignore  .goosehints  CLA.md  CLAUDE.md  CONTRIBUTORS.md  Dockerfile  README.md  agent_onboarding.md  alembic.ini  pyproject.toml  requirements.txt  start.sh  tasks.json  test_goose_view.py  todo.json  wf  workflow
_spec/: AGENTS.md  ARCHITECTURE.md  BRIEF.md  DIRECTOR.md  HANDOFF.md  HANDOFF_1088_T021.md  HANDOFF_683_T003.md  HANDOFF_684_T001.md  HANDOFF_685_T006.md  HANDOFF_686_SEO-001.md  HANDOFF_687_SEO-001.md  HANDOFF_688_T020.md  PLAN_v1.5.md  PROJECT_CHARTER.md  REFACTOR_PLAN.md  REQUIREMENTS.md  SECURITY_CONTROLS.md  SESSION_CONTEXT.md  TASKS.md  TEST_PLAN.md  THREAT_INTEL.md  WORK_CYCLE_0_T020.md  WORK_CYCLE_1249_T021.md  WORK_CYCLE_1250_T022.md  WORK_CYCLE_1251_SEO-001.md  WORK_CYCLE_1251_SEO-002.md  WORK_CYCLE_1251_SEO-003.md  WORK_CYCLE_1251_SEO-004.md  WORK_CYCLE_1251_SEO-005.md  WORK_CYCLE_1251_SEO-006.md  WORK_CYCLE_1251_SEO-007.md  WORK_CYCLE_1251_SEO-008.md  WORK_CYCLE_1251_SEO-009.md  WORK_CYCLE_1251_SEO-010.md  WORK_CYCLE_1251_T001.md  WORK_CYCLE_1251_T002.md  WORK_CYCLE_1251_T003.md  WORK_CYCLE_1251_T004.md  WORK_CYCLE_1251_T005.md  WORK_CYCLE_1251_T006.md  (+13 more)
agents/: dev.md  pm.md  qa.md  security.md
alembic/: env.py
alembic/versions/: 018315fe66d3_add_docs_testing_states_to_runstate_enum.py  157bbc9f206d_add_daemon_started_at_to_director_.py  (+32 more)
app/: __init__.py  apps.py  urls.py
config/: qa_requirements.json  settings.py  urls.py
core/: db.py
docker/: .env.example  docker-compose.yml
docs/: CHANGELOG.md  DOCKER_MODEL_RUNNER.md  JOB_QUEUE_SYSTEM.md  N8N_INTEGRATION.md  OFFLINE_SETUP.md  PRODUCTION_ARCHITECTURE.md
ledger/: README.md  failed_claims.yaml
logs/: goose_8080.err
pipeline-editor/: next.config.js  package-lock.json  package.json  tailwind.config.js
scripts/: agent_runner.py  backfill_proofs.py  cleanup_test_data.py  discover_project.py  install.sh  mcp_vision_server.py  restart_server.sh  run_pipeline.py  seed_role_configs.py  setup_goose_vision.sh  workflow.py  workflow_tui.py
tests/: conftest.py  test_agent_runner.py  test_bug_api.py  test_bug_report.py  test_claims.py  test_dashboard_view.py  test_deployment.py  test_director_quality_subtasks.py  test_models.py  test_project_api.py  test_project_setup.py  test_role_config.py  test_run_service.py  test_task_api.py  test_task_queue.py  test_task_queue_service.py  test_ui_screenshots.py  test_ui_views.py  test_work_cycle_cleanup_api.py  test_workflow_tui.py
tooling/: run_role.sh
uploads/: .gitignore
(+101 files in other folders)
