[project]
name = "workflow-hub"
version = "0.1.0"
description = "Open source agentic team workflow - AI agents collaborate through Kanban pipeline with human-in-the-loop approval gates"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Mauricio Zuniga", email = "mz@artofmetazen.com"}
]
maintainers = [
    {name = "Mauricio Zuniga", email = "mz@artofmetazen.com"}
]
requires-python = ">=3.9"
keywords = [
    "ai-agents",
    "agentic",
    "workflow",
    "kanban",
    "llm",
    "automation",
    "devops",
    "pipeline",
    "tdd",
    "code-quality",
    "multi-agent",
    "developer-tools",
    "local-first"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "django>=4.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.12",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "playwright>=1.40"
]

[project.urls]
Homepage = "https://github.com/metazen11/workflow-hub"
Documentation = "https://github.com/metazen11/workflow-hub#readme"
Repository = "https://github.com/metazen11/workflow-hub.git"
Issues = "https://github.com/metazen11/workflow-hub/issues"
Changelog = "https://github.com/metazen11/workflow-hub/releases"

[project.scripts]
workflow-hub = "scripts.workflow:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
